--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
         <div class="main-container">
             <div class="info-container">
                 <h1>Michael Popp</h1>
-                <div class="catchline">Software Developer</div>
-                <div class="About Me">
+                <h3 class="catchline">Junior Software Developer</h3>
+                <div class="About-Me">
                     <ul>
                         <li>Nassau Bay, TX</li>
                         <li>Texas State University</li>
                     </ul>
                 </div>
                 <div class="Skills">
+                    <h4>Skills & Tools</h4>
                     <ul>
-                        <li>Git, vim & tmux</li>
-                        <li>JavaScript & C/C++</li>
-                        <li>Web Technologies</li>
+                        <li>HTML & CSS</li>
                         <li>React & Node.js</li>
-                        <li>Linux operating systems</li>
+                        <li>JavaScript & C/C++</li>
+                        <li>Linux, vim, tmux & git</li>
                     </ul>
                 </div>
                 <div class="Links">
+                    <h4>Links</h4>
                     <ul class="links-list">
                         <li>
                             <a href="https://github.com/michaelpopp">GitHub</a>
@@ -39,6 +40,12 @@
                 </div>
             </div>
             <div class="project-container">
+                <h4>Projects</h4>
+                <ul>
+                    <li>
+                        <h6>Nuber!</h6>
+                    </li>
+                </ul>
             </div>
         </div>
     </body>
