Initialized CSS file & worked on html page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Michael Popp</title>
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body>
         <div class="main-container">
             <div class="info-container">
                 <h1>Michael Popp</h1>
-                <h3 class="catchline">Junior Software Developer</h3>
+                <h3 class="catchline">Aspiring Software Developer</h3>
                 <div class="About-Me">
                     <ul>
                         <li>Nassau Bay, TX</li>
@@ -43,7 +44,16 @@
                 <h4>Projects</h4>
                 <ul>
                     <li>
-                        <h6>Nuber!</h6>
+                        <h5>Student Disciplinary Action Bot</h5>
+                        <p>Discord bot created for my friend's server to derived to fulfill patrons request</p>
+                    </li>
+                    <li>
+                        <h5>Namazon!</h5>
+                        <p>Web-application designed to resemble an online ecommerce-store</p>
+                    </li>
+                    <li>
+                        <h5>Nuber!</h5>
+                        <p>Group-based project to develop a API with functionality similar to the Uber app.</p>
                     </li>
                 </ul>
             </div>
