--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="main-container">
             <div class="info-container">
-                <h1>Michael Popp</h1>
+                <h1 class="name">Michael Popp</h1>
                 <h3 class="catchline">Aspiring Software Developer</h3>
                 <div class="About-Me">
                     <ul>
@@ -45,15 +45,12 @@
                 <ul>
                     <li>
                         <h5>Student Disciplinary Action Bot</h5>
-                        <p>Discord bot created for my friend's server to derived to fulfill patrons request</p>
                     </li>
                     <li>
                         <h5>Namazon!</h5>
-                        <p>Web-application designed to resemble an online ecommerce-store</p>
                     </li>
                     <li>
                         <h5>Nuber!</h5>
-                        <p>Group-based project to develop a API with functionality similar to the Uber app.</p>
                     </li>
                 </ul>
             </div>
