further work done

--- a/index.html
+++ b/index.html
@@ -7,52 +7,50 @@
     </head>
     <body>
         <div class="main-container">
-            <div class="info-container">
-                <h1 class="name">Michael Popp</h1>
-                <h3 class="catchline">Aspiring Software Developer</h3>
-                <div class="About-Me">
-                    <ul>
-                        <li>Nassau Bay, TX</li>
-                        <li>Texas State University</li>
-                    </ul>
-                </div>
-                <div class="Skills">
-                    <h4>Skills & Tools</h4>
-                    <ul>
-                        <li>HTML & CSS</li>
-                        <li>React & Node.js</li>
-                        <li>JavaScript & C/C++</li>
-                        <li>Linux, vim, tmux & git</li>
-                    </ul>
-                </div>
-                <div class="Links">
-                    <h4>Links</h4>
-                    <ul class="links-list">
-                        <li>
-                            <a href="https://github.com/michaelpopp">GitHub</a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/michael-c-popp/">LinkedIn</a>
-                        </li>
-                        <li>
-                            <a href=#>Monero</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class=name-container>
+                     <h1 class="name">Michael C. Popp</h1>
+                 <h2 class="catchline">Junior Software Developer</h2>
             </div>
-            <div class="project-container">
-                <h4>Projects</h4>
-                <ul>
-                    <li>
-                        <h5>Student Disciplinary Action Bot</h5>
-                    </li>
-                    <li>
-                        <h5>Namazon!</h5>
-                    </li>
-                    <li>
-                        <h5>Nuber!</h5>
-                    </li>
-                </ul>
+            <div class="content-container">
+                <div class="content-left-container">
+                    <div class="About-Me">
+                        <h3>About me</h3>
+                        <ul>
+                            <li>Nassau Bay, TX</li>
+                            <li>B.S. in Computer Science</li>
+                        </ul>
+                    </div>
+                    <div class="Skills">
+                        <h3>Hobbies</h3>
+                        <ul>
+                            <li>Brewing/consuming tea</li>
+                            <li>Building custom keyboards</li>
+                            <li>Tinkering on unix-like systems</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content-right-container">
+                    <div class ="Downloads">
+                        <h3>Downloads</h3>
+                        <ul>
+                            <li><a href="./assets/resume.pdf" download>Resume</a></li>
+                        </ul>
+                    </div>
+                    <div class="Links">
+                        <h3>Links</h3>
+                        <ul class="links-list">
+                            <li>
+                                <a href="https://github.com/michaelpopp">GitHub</a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/michael-c-popp/">LinkedIn</a>
+                            </li>
+                            <li>
+                                <a href=#>Monero (page under construction)</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
