--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="main-container">
             <div class=name-container>
                      <h1 class="name">Michael C. Popp</h1>
-                 <h2 class="catchline">Junior Software Developer</h2>
+                 <h2 class="catchline">Aspiring Software Developer</h2>
             </div>
             <div class="content-container">
                 <div class="content-left-container">
@@ -23,7 +23,7 @@
                     <div class="Skills">
                         <h3>Hobbies</h3>
                         <ul>
-                            <li>Brewing/consuming tea</li>
+                            <li>Listening to music</li>
                             <li>Building custom keyboards</li>
                             <li>Tinkering on unix-like systems</li>
                         </ul>
@@ -34,6 +34,7 @@
                         <h3>Downloads</h3>
                         <ul>
                             <li><a href="./assets/resume.pdf" download>Resume</a></li>
+                            <li><a href="./assets/keyboard-photos.zip" download>Keyboard Collection</a></li>
                         </ul>
                     </div>
                     <div class="Links">
@@ -46,7 +47,7 @@
                                 <a href="https://www.linkedin.com/in/michael-c-popp/">LinkedIn</a>
                             </li>
                             <li>
-                                <a href=#>Monero (page under construction)</a>
+                                <a href="./pages/monero.html">Donate Monero</a>
                             </li>
                         </ul>
                     </div>
