--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Michael Popp</title>
         <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="shortcut icon" href="./assets/terminal.ico">
     </head>
     <body>
         <div class="main-container">
