--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="Skills">
                         <h3>Hobbies</h3>
                         <ul>
-                            <li>Listening to music</li>
+                            <li>Brewing & drinking tea</li>
                             <li>Building custom keyboards</li>
                             <li>Tinkering on unix-like systems</li>
                         </ul>
