--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class ="Downloads">
                         <h3>Downloads</h3>
                         <ul>
-                            <li><a href="./assets/resume.pdf" download>Resume</a></li>
+                            <li><a href="./assets/cv.pdf" download>Resume</a></li>
                             <li><a href="./assets/keyboard-photos.zip" download>Keyboard Collection</a></li>
                         </ul>
                     </div>
