inital blog feature commit

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <h3>Links</h3>
                         <ul class="links-list">
                             <li>
-                                <a href="https://github.com/michaelpopp">GitHub</a>
+                                <a href="./pages/blogs/blog-list.html" >Blog</a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/michael-c-popp/">LinkedIn</a>
+                                <a href="https://github.com/michaelpopp">GitHub</a>
                             </li>
                             <li>
                                 <a href="./pages/monero.html">Donate Monero</a>
