blog list finished

--- a/pages/blogs/blog-list.html
+++ b/pages/blogs/blog-list.html
@@ -7,5 +7,17 @@
         <link rel="shortcut icon" href="../../assets/terminal.ico">
     </head>
     <body>
+        <div class="main-container">
+            <div class="blog-list-title-container">
+                <h1 class="blog-list-title">Catalog</h1>
+            </div>
+            <div class="blog-list-container">
+                <ul class="blog-list">
+                    <li>
+                        <a href=#>Test Blog Link</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
