--- a/pages/blogs/blog-list.html
+++ b/pages/blogs/blog-list.html
@@ -14,7 +14,7 @@
             <div class="blog-list-container">
                 <ul class="blog-list">
                     <li>
-                        <a href=#>Test Blog Link</a>
+                        <a href="./photography-workflow-update.html">Phtography Workflow Update!</a>
                     </li>
                 </ul>
             </div>
