Revised photo-workflow-update post

--- a/pages/blogs/photography-workflow-update.html
+++ b/pages/blogs/photography-workflow-update.html
@@ -15,28 +15,28 @@
             <div class="blog-content">
                 <p>
                 I've enjoyed dabbling in photography as an amateur for a while now. Since moving from 
-                Windows to Linux as my daily operating system I've needed too find new software to adapt
-                to my hobbies and workflow. Lately, I was interested in finding the new tools to edit 
+                Windows to Linux as my daily operating system I've needed to find new software for 
+                my hobbies and workflow. Lately, I was interested in finding new tools to edit 
                 photos.
                 </p>
                 <p>
-                On Windows, my go to photography software was Canon's Digital Photo Professional software. 
-                For those unaware, if you own a canon camera, you will recieve a suite of software with it!
+                On Windows, my go to photography application was Canon's Digital Photo Professional software. 
+                For those unaware, if you own a canon camera, you will recieve a suite of digital tools with it!
                 Unfortunately, none of the software is available outside of Windows and MacOS. After doing 
-                my due diligence, I fell in love with the FOSS alternative, Darktables. It feels like a 
-                program that is easy to learn but takes years to master.  
+                my due diligence, I was impressed with the FOSS alternative, Darktables. It feels like a 
+                program that is easy to learn but takes a while to master.  
                 </p>
                 <p>
                 My camera's raw format is canon's CR3 extension. It's currently not supported on Darktables 
                 and posed itself as a potential problem. Luckily, the solution was solved by those that 
-                came before me. It seemed the best (while not ideal) solution was to use Adobe's DNG converter 
-                software to convert all my images from CR3 to DNG (which can be edited in darktables). 
-                You have to use Wine since adobe's software doesn't run native on Linux either but it wasn't
+                came before me. It seemed the best while not ideal solution was to use Adobe's DNG converter 
+                software to convert all my images from CR3 to DNG ,which can be edited in Darktables. 
+                You have to use Wine since Adobe's program doesn't run native on Linux either. Overall, it wasn't
                 to bad of a hassle to setup and install.
                 </p>
                 <p>
-                Overall, I'm pretty happy with my new workflow for taking pictures. A lot of time will be spent
-                soon learning all the ins-and-outs of darktables!
+                In conclusion, I'm pretty happy with my new workflow for taking pictures. A lot of time will be spent
+                learning all the ins-and-outs of Darktables!
                 </p>
 
             </div>
