New social Media page and link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                      <h1 class="name">Michael C. Popp</h1>
                  <h2 class="catchline">Aspiring Software Developer</h2>
             </div>
-            <div class="content-container">
+            <div class="content-split-container">
                 <div class="content-left-container">
                     <div class="About-Me">
                         <h3>About me</h3>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="content-right-container">
-                    <div class ="Downloads">
+                    <div class ="links-list">
                         <h3>Downloads</h3>
                         <ul>
                             <li><a href="./assets/cv.pdf" download>Resume</a></li>
@@ -45,7 +45,7 @@
                                 <a href="./pages/blogs/blog-list.html" >Blog</a>
                             </li>
                             <li>
-                                <a href="https://github.com/michaelpopp">GitHub</a>
+                                <a href="./pages/social-links.html">Social Media</a>
                             </li>
                             <li>
                                 <a href="./pages/monero.html">Donate Monero</a>
