--- a/pages/blogs/blog-list.html
+++ b/pages/blogs/blog-list.html
@@ -14,6 +14,9 @@
             <div class="blog-list-container">
                 <ul class="blog-list">
                     <li>
+                        <a href="./keyboard-meetup.html">Houston Keyboard Meetup</a>
+                    </li>
+                    <li>
                         <a href="./photography-workflow-update.html">Phtography Workflow Update!</a>
                     </li>
                 </ul>
