--- a/pages/blogs/keyboard-meetup.html
+++ b/pages/blogs/keyboard-meetup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Template Title Here</title>
+        <title>Houston Keyboard Meetup</title>
         <link rel="stylesheet" href="../../styles/blog-styles.css">
         <link rel="shortcut icon" href="../../assets/terminal.ico">
     </head>
