--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="About-Me">
                         <h3>About me</h3>
                         <ul>
-                            <li>Nassau Bay, TX</li>
+                            <li>Houston, TX</li>
                             <li>B.S. in Computer Science</li>
                         </ul>
                     </div>
