updated index page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main-container">
             <div class=name-container>
                      <h1 class="name">Michael C. Popp</h1>
-                 <h2 class="catchline">Aspiring Software Developer</h2>
+                 <h2 class="catchline">Aspiring System Administrator</h2>
             </div>
             <div class="content-split-container">
                 <div class="content-left-container">
@@ -46,9 +46,6 @@
                             </li>
                             <li>
                                 <a href="./pages/social-links.html">Social Media</a>
-                            </li>
-                            <li>
-                                <a href="./pages/monero.html">Donate Monero</a>
                             </li>
                         </ul>
                     </div>
