--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main-container">
             <div class=name-container>
                      <h1 class="name">Michael C. Popp</h1>
-                 <h2 class="catchline">Aspiring System Administrator</h2>
+                 <a class="catchline" href="https://en.wikipedia.org/wiki/Worse_is_better">Worse is Better!</a>
             </div>
             <div class="content-split-container">
                 <div class="content-left-container">
