--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class ="links-list">
                         <h3>Downloads</h3>
                         <ul>
-                          <-- <li><a href="./assets/public-resume.pdf" download>Resume (39.3 KB)</a></li>  -->
+                          <!-- <li><a href="./assets/public-resume.pdf" download>Resume (39.3 KB)</a></li>  -->
                             <li><a href="./assets/keyboard-photos.zip" download>Keyboard Collection (22.8 MB)</a></li>
                         </ul>
                     </div>
