--- a/pages/social-links.html
+++ b/pages/social-links.html
@@ -39,7 +39,7 @@
               <a href="https://letterboxd.com/michaelpopp/">Letterboxd</a>
             </li>
             <li>
-              <a href="https://myanimelist.net/profile/michaelpopp">MyAnimeList</a>
+              <a href="https://myanimelist.net/profile/OnesComplement">MyAnimeList</a>
             </li>
           </ul>
         </div>
