commented out link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h3>Downloads</h3>
                         <ul>
                           <!-- <li><a href="./assets/public-resume.pdf" download>Resume (39.3 KB)</a></li>  -->
-                            <li><a href="./assets/keyboard-photos.zip" download>Keyboard Collection (22.8 MB)</a></li>
+                            <li><a href="./assets/keyboard-photos.zip" download>Keyboard Collection (Zip File)</a></li>
                         </ul>
                     </div>
                     <div class="Links">
