--- a/pages/blogs/blog-list.html
+++ b/pages/blogs/blog-list.html
@@ -17,7 +17,7 @@
                         <a href="./keyboard-meetup.html">Houston Keyboard Meetup</a>
                     </li>
                     <li>
-                        <a href="./photography-workflow-update.html">Phtography Workflow Update!</a>
+                        <a href="./photography-workflow-update.html">Photography Workflow Update!</a>
                     </li>
                 </ul>
             </div>
