--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </ul>
                     </div>
                     <div class="Links">
-                        <h3>Links</h3>
+                        <h3>Directories</h3>
                         <ul class="links-list">
                             <li>
                                 <a href="./pages/blogs/blog-list.html" >Blog</a>
@@ -47,6 +47,9 @@
                             <li>
                                 <a href="./pages/social-links.html">Social Media</a>
                             </li>
+			    <li>
+				<a href="./pages/interesting-webpages.html">Other Interesting Websites</a>
+			    </li>
                         </ul>
                     </div>
                 </div>
