added webpage link

--- a/pages/interesting-webpages.html
+++ b/pages/interesting-webpages.html
@@ -22,6 +22,9 @@
                     <li>
                         <a href="https://beparanoid.de/">beparanoid.de</a>
                     </li>
+		    <li>
+		        <a href="https://denshi.org/">denshi.org</a>
+		    </li>
                 </ul>
             </div>
         </div>
