--- a/pages/interesting-webpages.html
+++ b/pages/interesting-webpages.html
@@ -14,8 +14,11 @@
             <div class="blog-list-container">
                 <ul class="blog-list">
 	     	        <li>
-			            <a href="https://www.gnu.org/">gnu.org</a>
+			            <a href="https://www.gnu.org/" title="The GNU Project">gnu.org</a>
 		            </li>
+                    <li>
+                        <a href="https://vkc.sh/">vkc.sh</a>
+                    </li>
                     <li>
                         <a href="https://hmagellan.com/">hmagellan.com</a>
                     </li>
