new social link

--- a/pages/social-links.html
+++ b/pages/social-links.html
@@ -45,6 +45,9 @@
             <li>
               <a href="https://myanimelist.net/profile/OnesComplement">MyAnimeList</a>
             </li>
+	    <li>
+	      <a href="https://monkeytype.com/profile/onescomplement">Monkeytype</a>
+            </li>	
           </ul>
         </div>
       </div>
