--- a/pages/social-links.html
+++ b/pages/social-links.html
@@ -40,7 +40,7 @@
           <h3>Social Networks</h3>
           <ul class="links-list">
             <li>
-              <a href="https://letterboxd.com/michaelpopp/">Letterboxd</a>
+              <a href="https://letterboxd.com/onescomplement/">Letterboxd</a>
             </li>
             <li>
               <a href="https://myanimelist.net/profile/OnesComplement">MyAnimeList</a>
