--- a/pages/social-links.html
+++ b/pages/social-links.html
@@ -32,7 +32,7 @@
             </li>
 	    -->
             <li>
-              <a href="https://www.youtube.com/channel/UCYe8e-BcXjbhanb_MCHmJgw">YouTube</a>
+              <a href="https://www.youtube.com/@poppnik">YouTube</a>
             </li>
           </ul>
         </div>
@@ -40,14 +40,16 @@
           <h3>Social Networks</h3>
           <ul class="links-list">
             <li>
-              <a href="https://letterboxd.com/onescomplement/">Letterboxd</a>
+              <a href="https://letterboxd.com/poppnik/">Letterboxd</a>
             </li>
+	    <!--
             <li>
               <a href="https://myanimelist.net/profile/OnesComplement">MyAnimeList</a>
             </li>
 	    <li>
 	      <a href="https://monkeytype.com/profile/onescomplement">Monkeytype</a>
             </li>	
+	    -->
           </ul>
         </div>
       </div>
